# OmniNexus_Fragmergent_Adaptive_Systems

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  components_init.py  pyproject.toml  requirements_txt.txt  v10_analysis.py  v10_avatar.py  v10_demo.py  v10_init.py  v10_omninexus.py  v10_optical_world.py  v10_oscillator.py  v10_rl_agent.py  v9_complete.py
analysis/: __init__.py
docs/: 01_CONCEPT.md  02_ARCHITECTURE.md  03_MATHEMATICS.md  04_APPLICATIONS.md  05_PATENT_ANALYSIS.md
examples/: __init__.py  basic_simulation.py  custom_configuration.py  multi_agent_competition.py
omninexus/: __init__.py  core.py  demo.py
omninexus/components/: __init__.py  avatar.py  optical_world.py  oscillator.py  rl_agent.py
tests/: __init__.py  test_oscillator.py
